--- a/index.html
+++ b/index.html
@@ -66,9 +66,19 @@
             <div class="dropdown">
               Exam Coaching
                 <div class="dropdown-content">
-                  <a href="#">Link 1</a>
-                  <a href="#">Link 2</a>
-                  <a href="#">Link 3</a>
+                  <a href="#">IELTS</a>
+                  <a href="#">GRE</a>
+                  <a href="#">GMAT</a>
+                  <a href="#">TOEFL</a>
+                  <a href="#">Engineering Enterance</a>
+                  <a href="#">CA</a>
+                  <a href="#">Medical Enterance</a>
+                  <a href="#">CET</a>
+                  <a href="#">IBPS</a>
+                  <a href="#">UPSC</a>
+                  <a href="#">SSC</a>
+                  <a href="#">Best Bank Clerical</a>
+                  <a href="#">GMAT</a>
                 </div>
               </div>
             </a>
@@ -99,6 +109,7 @@
               </div>
             </a>
                   </li>
+                  
                   <!-- <li class="nav-item hide-small hide-medium">
         
                     <a class="nav-link f12 nav-button px-3" href="https://api.whatsapp.com/send?phone=9899446742" id="c11" target="_blank">ENQUIRY NOW</a>
@@ -181,20 +192,20 @@
                       <br>
                       <h5>&nbsp;Which of the subjects do you need tution for ? </h5>
                       <div class="modal-body ">
-                          <label>Accountancy &nbsp;&nbsp;</label><input type="checkbox"  id="input1" name="input1"> <br><br>
-                          <label>English&nbsp;&nbsp;</label><input type="checkbox" id="input2" name="input2"> <br><br>
-                          <label>Chemistry &nbsp;&nbsp;</label><input type="checkbox" id="input3" name="input3"> <br><br>
-                          <label>Economics &nbsp;&nbsp;</label><input type="checkbox" id="input4" name="input4"> <br><br>
-                          <label>Biochemistry &nbsp;&nbsp;</label><input type="checkbox" id="input5" name="input5"> <br><br>
-                          <label>Biology &nbsp;&nbsp;</label><input type="checkbox" id="input5" name="input5"> <br><br>
-                          <label>Physics &nbsp;&nbsp;</label><input type="checkbox" id="input5" name="input5"> <br><br>
-                          <label>Computer Science &nbsp;&nbsp;</label><input type="checkbox" id="input5" name="input5"> <br><br>
-                          <label>Mathematics &nbsp;&nbsp;</label><input type="checkbox" id="input5" name="input5"> <br><br>
-                          <label>Geography &nbsp;&nbsp;</label><input type="checkbox" id="input5" name="input5"> <br><br>
+                          <label>Accountancy &nbsp;&nbsp;</label><input type="checkbox"  id="input1" name="input1"> 
+                          <label>English&nbsp;&nbsp;</label><input type="checkbox" id="input2" name="input2"> 
+                          <label>Chemistry &nbsp;&nbsp;</label><input type="checkbox" id="input3" name="input3"> 
+                          <label>Economics &nbsp;&nbsp;</label><input type="checkbox" id="input4" name="input4">
+                       <label>Biochemistry &nbsp;&nbsp;</label><input type="checkbox" id="input5" name="input5"> 
+                          <label>Biology &nbsp;&nbsp;</label><input type="checkbox" id="input6" name="input6"> 
+                          <label>Physics &nbsp;&nbsp;</label><input type="checkbox" id="input7" name="input7"> 
+                          <label>Computer Science &nbsp;&nbsp;</label><input type="checkbox" id="input8" name="input8"> 
+                          <label>Mathematics &nbsp;&nbsp;</label><input type="checkbox" id="input9" name="input9"> 
+                          <label>Geography &nbsp;&nbsp;</label><input type="checkbox" id="input10" name="input10"> 
                       </div>
                       <div class="modal-footer">
                           <a href="#"  data-toggle="modal" data-target="#modal222">  <button type="button" class="btn btn-outline-danger" onclick="getdata()" data-dismiss="modal" >Back</button></a>
-                          <a href="#"  data-toggle="modal" data-target="#modal333">  <button type="button" class="btn btn-outline-success" onclick="getdata()" data-dismiss="modal" >Next</button></a>
+                          <a href="#"  data-toggle="modal" data-target="#modal444">  <button type="button" class="btn btn-outline-success" onclick="getdata()" data-dismiss="modal" >Next</button></a>
                       </div>
 
                   </div>
@@ -214,19 +225,23 @@
                           <button type="button" class="close" data-dismiss="modal">&times;</button>
                       </div>
                       <br>
-                      <h5>&nbsp; Which board of education is you looking for ?</h5>
+                      <h5>&nbsp;Which of the subjects do you need tution for ?</h5>
   
-  
-                      <div class="modal-body">
-                          <label>CBSE &nbsp;&nbsp;</label><input type="checkbox" id="input1" name="input1"><br><br>
-                          <label>ISE / ICSE &nbsp;&nbsp;</label><input type="checkbox" id="input2" name="input2"><br><br>
-                          <label>State &nbsp;&nbsp;</label><input type="checkbox" id="input3" name="input3"><br><br>
-                          <label>International Baccalaurete &nbsp;&nbsp;</label><input type="checkbox" id="input4" name="input4"><br><br>
-                          <label>IGCSE &nbsp;&nbsp;</label><input type="checkbox" id="input5" name="input5"><br>
-                      </div>
+                      <div class="modal-body ">
+                        <label>History &nbsp;&nbsp;</label><input type="checkbox"  id="input1" name="input1"> 
+                        <label>Legal Studies&nbsp;&nbsp;</label><input type="checkbox" id="input2" name="input2"> 
+                        <label>Physical Education &nbsp;&nbsp;</label><input type="checkbox" id="input3" name="input3"> 
+                        <label>Political Science &nbsp;&nbsp;</label><input type="checkbox" id="input4" name="input4">
+                     <label>Sociology &nbsp;&nbsp;</label><input type="checkbox" id="input5" name="input5"> 
+                        <label>Home Science &nbsp;&nbsp;</label><input type="checkbox" id="input6" name="input6"> 
+                        <label>Philosphy &nbsp;&nbsp;</label><input type="checkbox" id="input7" name="input7"> 
+                        <label>Business Studies &nbsp;&nbsp;</label><input type="checkbox" id="input8" name="input8"> 
+                        <label>Psycology&nbsp;&nbsp;</label><input type="checkbox" id="input9" name="input9"> 
+                        <label>Hindi &nbsp;&nbsp;</label><input type="checkbox" id="input10" name="input10"> 
+                        </div>
                       <div class="modal-footer">
                           <a href="#"  data-toggle="modal" data-target="#modal333">  <button type="button" class="btn btn-outline-success" onclick="getdata()" data-dismiss="modal" >Next</button></a>
-
+                          <a href="#"  data-toggle="modal" data-target="#modal555">  <button type="button" class="btn btn-outline-success" onclick="getdata()" data-dismiss="modal" >Next</button></a>
                       </div>
 
                   </div>
@@ -236,9 +251,157 @@
 
           </div>
 
+          <div class="modal" id="modal555">
+            <div class="modal-dialog" id="modal3">
+                <div class="modal-content">
+
+                    <div class="modal-header">
+                        <h4 class="modal-title"><b>Find Best class 12 Tutions near me </b></h4>
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    </div>
+                    <br>
+                    <h5>&nbsp; Which board of education is you looking for ?</h5>
+
+
+                    <div class="modal-body">
+                        <label>CBSE &nbsp;&nbsp;</label><input type="checkbox" id="input1" name="input1"><br><br>
+                        <label>ISE / ICSE &nbsp;&nbsp;</label><input type="checkbox" id="input2" name="input2"><br><br>
+                        <label>State &nbsp;&nbsp;</label><input type="checkbox" id="input3" name="input3"><br><br>
+                        <label>International Baccalaurete &nbsp;&nbsp;</label><input type="checkbox" id="input4" name="input4"><br><br>
+                        <label>IGCSE &nbsp;&nbsp;</label><input type="checkbox" id="input5" name="input5"><br>
+                    </div>
+                    <div class="modal-footer">
+                        <a href="#"  data-toggle="modal" data-target="#modal333">  <button type="button" class="btn btn-outline-success" onclick="getdata()" data-dismiss="modal" >Next</button></a>
+
+                    </div>
+
+                </div>
+            </div>
 
 
 
+        </div>
+
+        <div class="modal" id="modal666">
+          <div class="modal-dialog" id="modal3">
+              <div class="modal-content">
+
+                  <div class="modal-header">
+                      <h4 class="modal-title"><b>Find Best class 12 Tutions near me </b></h4>
+                      <button type="button" class="close" data-dismiss="modal">&times;</button>
+                  </div>
+                  <br>
+                  <h5>&nbsp; Which board of education is you looking for ?</h5>
+
+
+                  <div class="modal-body">
+                      <label>CBSE &nbsp;&nbsp;</label><input type="checkbox" id="input1" name="input1"><br><br>
+                      <label>ISE / ICSE &nbsp;&nbsp;</label><input type="checkbox" id="input2" name="input2"><br><br>
+                      <label>State &nbsp;&nbsp;</label><input type="checkbox" id="input3" name="input3"><br><br>
+                      <label>International Baccalaurete &nbsp;&nbsp;</label><input type="checkbox" id="input4" name="input4"><br><br>
+                      <label>IGCSE &nbsp;&nbsp;</label><input type="checkbox" id="input5" name="input5"><br>
+                  </div>
+                  <div class="modal-footer">
+                      <a href="#"  data-toggle="modal" data-target="#modal333">  <button type="button" class="btn btn-outline-success" onclick="getdata()" data-dismiss="modal" >Next</button></a>
+
+                  </div>
+
+              </div>
+          </div>
+
+
+
+      </div>
+      <div class="modal" id="modal777">
+        <div class="modal-dialog" id="modal3">
+            <div class="modal-content">
+
+                <div class="modal-header">
+                    <h4 class="modal-title"><b>Find Best class 12 Tutions near me </b></h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <br>
+                <h5>&nbsp; Which board of education is you looking for ?</h5>
+
+
+                <div class="modal-body">
+                    <label>CBSE &nbsp;&nbsp;</label><input type="checkbox" id="input1" name="input1"><br><br>
+                    <label>ISE / ICSE &nbsp;&nbsp;</label><input type="checkbox" id="input2" name="input2"><br><br>
+                    <label>State &nbsp;&nbsp;</label><input type="checkbox" id="input3" name="input3"><br><br>
+                    <label>International Baccalaurete &nbsp;&nbsp;</label><input type="checkbox" id="input4" name="input4"><br><br>
+                    <label>IGCSE &nbsp;&nbsp;</label><input type="checkbox" id="input5" name="input5"><br>
+                </div>
+                <div class="modal-footer">
+                    <a href="#"  data-toggle="modal" data-target="#modal333">  <button type="button" class="btn btn-outline-success" onclick="getdata()" data-dismiss="modal" >Next</button></a>
+
+                </div>
+
+            </div>
+        </div>
+
+
+
+    </div>
+    <div class="modal" id="modal888">
+      <div class="modal-dialog" id="modal3">
+          <div class="modal-content">
+
+              <div class="modal-header">
+                  <h4 class="modal-title"><b>Find Best class 12 Tutions near me </b></h4>
+                  <button type="button" class="close" data-dismiss="modal">&times;</button>
+              </div>
+              <br>
+              <h5>&nbsp; Which board of education is you looking for ?</h5>
+
+
+              <div class="modal-body">
+                  <label>CBSE &nbsp;&nbsp;</label><input type="checkbox" id="input1" name="input1"><br><br>
+                  <label>ISE / ICSE &nbsp;&nbsp;</label><input type="checkbox" id="input2" name="input2"><br><br>
+                  <label>State &nbsp;&nbsp;</label><input type="checkbox" id="input3" name="input3"><br><br>
+                  <label>International Baccalaurete &nbsp;&nbsp;</label><input type="checkbox" id="input4" name="input4"><br><br>
+                  <label>IGCSE &nbsp;&nbsp;</label><input type="checkbox" id="input5" name="input5"><br>
+              </div>
+              <div class="modal-footer">
+                  <a href="#"  data-toggle="modal" data-target="#modal333">  <button type="button" class="btn btn-outline-success" onclick="getdata()" data-dismiss="modal" >Next</button></a>
+
+              </div>
+
+          </div>
+      </div>
+
+
+
+  </div>
+  <div class="modal" id="modal999">
+    <div class="modal-dialog" id="modal3">
+        <div class="modal-content">
+
+            <div class="modal-header">
+                <h4 class="modal-title"><b>Find Best class 12 Tutions near me </b></h4>
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+            </div>
+            <br>
+            <h5>&nbsp; Which board of education is you looking for ?</h5>
+
+
+            <div class="modal-body">
+                <label>CBSE &nbsp;&nbsp;</label><input type="checkbox" id="input1" name="input1"><br><br>
+                <label>ISE / ICSE &nbsp;&nbsp;</label><input type="checkbox" id="input2" name="input2"><br><br>
+                <label>State &nbsp;&nbsp;</label><input type="checkbox" id="input3" name="input3"><br><br>
+                <label>International Baccalaurete &nbsp;&nbsp;</label><input type="checkbox" id="input4" name="input4"><br><br>
+                <label>IGCSE &nbsp;&nbsp;</label><input type="checkbox" id="input5" name="input5"><br>
+            </div>
+            <div class="modal-footer">
+                <a href="#"  data-toggle="modal" data-target="#modal333">  <button type="button" class="btn btn-outline-success" onclick="getdata()" data-dismiss="modal" >Next</button></a>
+
+            </div>
+
+        </div>
+    </div>
+
+
+
+</div>
 
 
 
