--- a/index.html
+++ b/index.html
@@ -89,9 +89,15 @@
             <div class="dropdown">
                IT Courses 
                 <div class="dropdown-content">
-                  <a href="#">Link 1</a>
-                  <a href="#">Link 2</a>
-                  <a href="#">Link 3</a>
+                  <a href="#">Java</a>
+                  <a href="#">Python</a>
+                  <a href="#">.NET</a>
+                  <a href="#">Microsoft Excel</a>
+                  <a href="#">SAP</a>
+                  <a href="#">Angular JS</a>
+                  <a href="#">PHP</a>
+                  <a href="#">Data Science</a>
+                  
                 </div>
               </div>
             </a>
@@ -102,9 +108,12 @@
             <div class="dropdown">
               Languages
                 <div class="dropdown-content">
-                  <a href="#">Link 1</a>
-                  <a href="#">Link 2</a>
-                  <a href="#">Link 3</a>
+                  <a href="#">English</a>
+                  <a href="#">French</a>
+                  <a href="#">Japnese</a>
+                  <a href="#">Hindi</a>
+                  <a href="#">Chinese</a>
+                  <a href="#">German</a>
                 </div>
               </div>
             </a>
